--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,7 +10,7 @@ framework:
         handler_id: ~
 
     #esi: true
-    #fragments: true
+    fragments: true
     php_errors:
         log: true
 
@@ -28,3 +28,5 @@ framework:
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
+    templating:
+        engines: ['twig']
