--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,15 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
         in_memory: { memory: ~ }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
 
             # activate different ways to authenticate
 
@@ -16,9 +18,33 @@ security:
 
             # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+                login_path: /login
+                check_path: /login_check
+                use_referer: true
+                default_target_path: /
+                always_use_default_target_path: false
+            logout:       
+                path: /logout
+                target: /
+
+    role_hierarchy:
+        ROLE_SELLER: ROLE_USER
+        ROLE_ADMIN:  ROLE_SELLER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
+    encoders:
+         FOS\UserBundle\Model\UserInterface:
+            algorithm: bcrypt
+            cost: 12
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/$, roles: ROLE_USER }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
