--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+homepage:
+    path: /
+    defaults:
+        _controller: App\Controller\IndexController::index
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
