--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,5 +6,10 @@ homepage:
     defaults:
         _controller: App\Controller\IndexController::index
 
+userpage:
+    path: /user
+    defaults:
+        _controller: App\Controller\UserController::index
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
