--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,3 +35,8 @@ services:
         class: App\Form\RegistrationType
         tags:
         - { name: form.type, alias: app_user_registration }
+
+    app.form.pruchasehistroy:
+        class: App\Form\PurchaseType
+        tags:
+        - { name: form.type, alias: app_purchasehistory }
