--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,3 +50,4 @@ security:
         - { path: ^/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/userList, role: ROLE_ADMIN }
