--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,8 +46,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/$, roles: ROLE_USER }
+        - { path: ^/userList, role: ROLE_ADMIN }
         - { path: ^/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/userList, role: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
