--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'zh_CN'
-    upload_directory: '../public/upload-images'
+    uploads_images_products: '../public/uploads/images/products'
 services:
     # default configuration for services in *this* file
     _defaults:
