--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'zh_CN'
+    users_file: '%kernel.project_dir%/public/uploads/files/users'
 
 services:
     # default configuration for services in *this* file
