[BUGFIX] 验证产品名和用户名是否存在

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     locale: 'zh_CN'
     uploads_images_products: '../public/uploads/images/products'
+    uploads_images_trackings: '../public/uploads/images/trackings'
     users_file: '%kernel.project_dir%/public/uploads/files/users'
 
 services:
