[BUGFIX] 优化翻译方法从后端API到前端

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -60,3 +60,6 @@ services:
         - { name: form.type, alis: app_userList_add }
 
     Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
+
+    tools:
+        class: App\Controller\ToolController
